--- a/admin/backend/.env
+++ b/admin/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/qryzo
+MONGODB_URI=mongodb+srv://anuapm:Payal%40209@qryzo.sf6ataq.mongodb.net/?retryWrites=true&w=majority&appName=qryzo
 JWT_SECRET=qryzo-jwt-secret-key-2024-development-only
 PORT=3001
